# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  launcher.py  pyproject.toml  setup.cfg
.github/workflows/: Action.yml  Linter.yml
files/: file1.yml  file2.yml  file4_1.yml  file4_2.yml
gendiff/: __init__.py  diff.py  file_reader.py  format_selector.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  diff.py  file_reader.py  gendiff.py  stylish.py
gendiff/scripts/formaters/: json.py  plain.py  stylish.py
tests/: test_diff.py  test_formater.py  test_json_files_diff.py  test_json_formater.py  test_plain_formater.py  test_stylish_formater.py  test_tree.py  test_yml_files_diff.py
tests/fixtures/: file_res.txt  test1_file1.yml  test1_file_res.txt  test2_file2.yml  test2_file_res.txt  test3_file1.yml  test3_file2.json  test3_file_res.txt  test4_file2.yml  test4_file_res.txt  test5_file2.json  test8_json_format_res.txt  test_plain.py
